--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 
 :root {
   --color-text: #2c2c2c;
-  --color-active: #393939;
-  --color-disabled: #868686;
+  --color-active: #656565;
+  --color-disabled: #9f9f9f;
   --color-border: #c7c7c7;
   --color-text-bright: #f9f9f9;
 }
